bugfix/app.js/deletedByBasket-fn/add-.toFixed()/style.css/.store/add-overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -222,6 +222,7 @@ body {
     display: none;
     align-items: center;
     cursor: default;
+    overflow-y: scroll;
 }
 
 .store p {
